Archive2/dc/9e300bf24e23c7/output
main.cpp: In function 'A f()':
main.cpp:10:14: error: converting to 'A' from initializer list would use explicit constructor 'A::A(const A&)'
     return {a};
              ^
