Archive2/dc/9e300bf24e23c7/main.cpp
#include <functional>
struct A
{
    A(){};
    explicit A(const A& a){};   
};
A f()
{
    A a;
    return {a};
    
}
int main()
{
    A a;
    A b(a);
    
}